--- a/parser_hh/hh_parser_gs.ipynb
+++ b/parser_hh/hh_parser_gs.ipynb
@@ -2,38 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dde5a73c",
+   "execution_count": 10,
+   "id": "35f09ddc",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Парсим по запросу 'Аналитик данных' and 'data analyst': 100%|██████████| 20/20 [00:10<00:00,  1.93it/s]"
+      "Парсим по запросу 'Аналитик данных' and 'data analyst': 20it [00:01, 19.01it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Парсинг выполнен в 2023-03-08 21:43:35.863298\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Парсинг выполнен в 2023-03-09 21:24:23.686556\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"\\n# Выгрузка в Google Sheets\\nscope = ['https://spreadsheets.google.com/feeds',\\n         'https://www.googleapis.com/auth/drive']\\n\\nmy_mail = 'your_mail'#почта\\npath_to_credentials = 'crdentials.json'\\n\\n# Authorization\\ncredentials = ServiceAccountCredentials.from_json_keyfile_name(\\n    'your_keyfile_name.json', scope)\\ngs = gspread.authorize(credentials)\\n\\n\\ntable_name = 'HH'\\nsheet = gs.create('HH')\\n\\nsheet.share(my_mail, perm_type='user', role='writer')\\n\\nspreadsheet_name = 'HH'\\nsheet = 'HH'\\nd2g.upload(df, table_name, sheet, credentials=credentials, row_names=True)\\nprint('Сохранено как '+sheet+' в', pd.Timestamp.now())\\n\""
+       "\"# Выгрузка в Google Sheets\\nscope = ['https://spreadsheets.google.com/feeds',\\n         'https://www.googleapis.com/auth/drive']\\n\\nmy_mail = 'your_mail'  # почта\\npath_to_credentials = 'crdentials.json'\\n\\n# Authorization\\ncredentials = ServiceAccountCredentials.from_json_keyfile_name(\\n    'your_keyfile_name.json', scope)\\ngs = gspread.authorize(credentials)\\n\\ntable_name = 'HH'\\nsheet = gs.create('HH')\\n\\nsheet.share(my_mail, perm_type='user', role='writer')\\n\\nspreadsheet_name = 'HH'\\nsheet = 'HH'\\nd2g.upload(df, table_name, sheet, credentials=credentials, row_names=True)\\nprint('Парсинг выполнен в', pd.Timestamp.now())\\n\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,9 +39,11 @@
     "import time\n",
     "from df2gspread import df2gspread as d2g\n",
     "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
     "job_title = \"'Аналитик данных' and 'data analyst'\"\n",
     "area = 1\n",
+    "\n",
     "\n",
     "def getPage(page=0):\n",
     "    params = {\n",
@@ -58,16 +53,22 @@
     "        'per_page': 100\n",
     "    }\n",
     "    req = requests.get('https://api.hh.ru/vacancies', params)\n",
-    "    req.raise_for_status() # проверяем статус ответа на ошибки\n",
-    "    data = req.json() # используем метод json() для декодирования JSON-ответа\n",
+    "    req.raise_for_status()  # проверяем статус ответа на ошибки\n",
+    "    data = req.json()  # используем метод json() для декодирования JSON-ответа\n",
     "    req.close()\n",
     "    return data\n",
     "\n",
-    "data = []\n",
-    "for page in tqdm(range(0, 20), desc='Парсим по запросу ' + job_title):\n",
+    "\n",
+    "def parse_page(page):\n",
     "    jsObj = getPage(page)\n",
-    "    data.extend(jsObj['items']) # добавляем список элементов \n",
-    "    time.sleep(0.1) # добавляем задержку, чтобы не перегружать сервер\n",
+    "    return jsObj['items']\n",
+    "\n",
+    "\n",
+    "with ThreadPoolExecutor(max_workers=10) as executor:\n",
+    "    futures = [executor.submit(parse_page, page) for page in range(0, 20)]\n",
+    "    data = []\n",
+    "    for future in tqdm(as_completed(futures), desc='Парсим по запросу ' + job_title):\n",
+    "        data.extend(future.result())\n",
     "\n",
     "df = pd.json_normalize(data).rename(columns=lambda c: c.replace('.', '_'))\n",
     "\n",
@@ -82,11 +83,13 @@
     "         'employer_url',\n",
     "         'snippet_requirement',\n",
     "         'snippet_responsibility',\n",
-    "         'schedule_name', 'address_raw', 'address_lat',\n",
+    "         'address_raw', 'address_lat',\n",
     "         'address_lng', 'address_metro_station_name']]\n",
+    "\n",
     "\n",
     "def highlighttext(column):\n",
     "    return column.str.replace('[<\\>\\/]', '', regex=True).str.replace('highlighttext', '', regex=True)\n",
+    "\n",
     "\n",
     "df.snippet_responsibility = highlighttext(df.snippet_responsibility)\n",
     "df.snippet_requirement = highlighttext(df.snippet_requirement)\n",
@@ -97,19 +100,17 @@
     "df.to_csv(csv_name, index=False)\n",
     "print('Парсинг выполнен' + ' в', pd.Timestamp.now())\n",
     "\n",
-    "\"\"\"\n",
-    "# Выгрузка в Google Sheets\n",
+    "\"\"\"# Выгрузка в Google Sheets\n",
     "scope = ['https://spreadsheets.google.com/feeds',\n",
     "         'https://www.googleapis.com/auth/drive']\n",
     "\n",
-    "my_mail = 'your_mail'#почта\n",
+    "my_mail = 'your_mail'  # почта\n",
     "path_to_credentials = 'crdentials.json'\n",
     "\n",
     "# Authorization\n",
     "credentials = ServiceAccountCredentials.from_json_keyfile_name(\n",
     "    'your_keyfile_name.json', scope)\n",
     "gs = gspread.authorize(credentials)\n",
-    "\n",
     "\n",
     "table_name = 'HH'\n",
     "sheet = gs.create('HH')\n",
@@ -119,17 +120,9 @@
     "spreadsheet_name = 'HH'\n",
     "sheet = 'HH'\n",
     "d2g.upload(df, table_name, sheet, credentials=credentials, row_names=True)\n",
-    "print('Сохранено как '+sheet+' в', pd.Timestamp.now())\n",
-    "\"\"\"\n"
+    "print('Парсинг выполнен в', pd.Timestamp.now())\n",
+    "\"\"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4116ede",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
