--- a/parser_hh/Parser_HH.ipynb
+++ b/parser_hh/Parser_HH.ipynb
@@ -2,33 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "35f09ddc",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Парсим по запросу 'Аналитик данных' and 'data analyst': 20it [00:01, 19.01it/s]\n"
+      "100%|██████████| 20/20 [00:00<00:00, 1333.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Парсинг выполнен в 2023-03-09 21:24:23.686556\n"
+      "Парсинг выполнен в 2023-03-22 18:10:55.031684\n",
+      "json не найден!\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "\"# Выгрузка в Google Sheets\\nscope = ['https://spreadsheets.google.com/feeds',\\n         'https://www.googleapis.com/auth/drive']\\n\\nmy_mail = 'your_mail'  # почта\\npath_to_credentials = 'crdentials.json'\\n\\n# Authorization\\ncredentials = ServiceAccountCredentials.from_json_keyfile_name(\\n    'your_keyfile_name.json', scope)\\ngs = gspread.authorize(credentials)\\n\\ntable_name = 'HH'\\nsheet = gs.create('HH')\\n\\nsheet.share(my_mail, perm_type='user', role='writer')\\n\\nspreadsheet_name = 'HH'\\nsheet = 'HH'\\nd2g.upload(df, table_name, sheet, credentials=credentials, row_names=True)\\nprint('Парсинг выполнен в', pd.Timestamp.now())\\n\""
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kiril\\AppData\\Local\\Temp\\ipykernel_17104\\1601645675.py:51: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df['url'] = df['url'].str.replace('https://api.hh.ru/vacancies/', 'https://hh.ru/vacancy/')\n"
+     ]
     }
    ],
    "source": [
@@ -40,12 +38,13 @@
     "from df2gspread import df2gspread as d2g\n",
     "from oauth2client.service_account import ServiceAccountCredentials\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "import gspread\n",
     "\n",
     "job_title = \"'Аналитик данных' and 'data analyst'\"\n",
     "area = 1\n",
     "\n",
     "\n",
-    "def getPage(page=0):\n",
+    "def get_vacancies(page):\n",
     "    params = {\n",
     "        'text': job_title,\n",
     "        'area': area,\n",
@@ -53,21 +52,16 @@
     "        'per_page': 100\n",
     "    }\n",
     "    req = requests.get('https://api.hh.ru/vacancies', params)\n",
-    "    req.raise_for_status()  # проверяем статус ответа на ошибки\n",
-    "    data = req.json()  # используем метод json() для декодирования JSON-ответа\n",
+    "    req.raise_for_status()\n",
+    "    data = req.json()\n",
     "    req.close()\n",
-    "    return data\n",
-    "\n",
-    "\n",
-    "def parse_page(page):\n",
-    "    jsObj = getPage(page)\n",
-    "    return jsObj['items']\n",
+    "    return data['items']\n",
     "\n",
     "\n",
     "with ThreadPoolExecutor(max_workers=10) as executor:\n",
-    "    futures = [executor.submit(parse_page, page) for page in range(0, 20)]\n",
+    "    futures = [executor.submit(get_vacancies, page) for page in tqdm(range(0, 20))]\n",
     "    data = []\n",
-    "    for future in tqdm(as_completed(futures), desc='Парсим по запросу ' + job_title):\n",
+    "    for future in as_completed(futures):\n",
     "        data.extend(future.result())\n",
     "\n",
     "df = pd.json_normalize(data).rename(columns=lambda c: c.replace('.', '_'))\n",
@@ -86,6 +80,11 @@
     "         'address_raw', 'address_lat',\n",
     "         'address_lng', 'address_metro_station_name']]\n",
     "\n",
+    "df['url'] = df['url'].str.replace('https://api.hh.ru/vacancies/', 'https://hh.ru/vacancy/')\n",
+    "df['url'] = df['url'].str.split('?').str[0]\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def highlighttext(column):\n",
     "    return column.str.replace('[<\\>\\/]', '', regex=True).str.replace('highlighttext', '', regex=True)\n",
@@ -99,35 +98,45 @@
     "csv_name_with_timestamp = job_title + timestr + \".csv\"\n",
     "df.to_csv(csv_name, index=False)\n",
     "print('Парсинг выполнен' + ' в', pd.Timestamp.now())\n",
-    "\n",
-    "\"\"\"# Выгрузка в Google Sheets\n",
+    "# Выгрузка в Google Sheets\n",
     "scope = ['https://spreadsheets.google.com/feeds',\n",
     "         'https://www.googleapis.com/auth/drive']\n",
     "\n",
-    "my_mail = 'your_mail'  # почта\n",
+    "my_mail = 'kirill.st.ks@gmail.com'  # почта\n",
     "path_to_credentials = 'crdentials.json'\n",
     "\n",
-    "# Authorization\n",
-    "credentials = ServiceAccountCredentials.from_json_keyfile_name(\n",
-    "    'your_keyfile_name.json', scope)\n",
-    "gs = gspread.authorize(credentials)\n",
+    "try:\n",
+    "    # Authorization\n",
+    "    credentials = ServiceAccountCredentials.from_json_keyfile_name(\n",
+    "        'key.json', scope)\n",
+    "    gs = gspread.authorize(credentials)\n",
     "\n",
-    "table_name = 'HH'\n",
-    "sheet = gs.create('HH')\n",
+    "    table_name = 'HH'\n",
+    "    sheet = gs.create('HH')\n",
     "\n",
-    "sheet.share(my_mail, perm_type='user', role='writer')\n",
+    "    sheet.share(my_mail, perm_type='user', role='writer')\n",
     "\n",
-    "spreadsheet_name = 'HH'\n",
-    "sheet = 'HH'\n",
-    "d2g.upload(df, table_name, sheet, credentials=credentials, row_names=True)\n",
-    "print('Парсинг выполнен в', pd.Timestamp.now())\n",
-    "\"\"\""
+    "    spreadsheet_name = 'HH'\n",
+    "    sheet = 'HH'\n",
+    "    d2g.upload(df, table_name, sheet, credentials=credentials, row_names=True)\n",
+    "    print('Выполнено')\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print('json не найден!')\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -142,13 +151,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "7d22b4072258c52a5f933bffbd4ef935e10846d1853a4e3c4ef3f838a383745d"
-   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
